# HwCodecDetect

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.zh.md  decoder_test.bat  encode_test.bat  encoder_test.bat  install_ffmpeg_if_needed.bat  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pyinstaller-release.yml  pypi-publish.yml  python-publish.yml  run-test.yml
HwCodecDetect/: __init__.py  install_ffmpeg_if_needed.py  run_tests.py
deprecated/: decoder_test.bat  encoder_test.bat
src/HwCodecDetect/: __init__.py  bitdepth_chroma_detect.py  codec_defs.py  color_table.py  gui.py  install_ffmpeg_if_needed.py  run_tests.py  theme.py  utils.py
